<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">같은그림 찾기</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="sameImage">같은 그림 찾기</string>

    <string name="startGame">START</string>
    <string name="achievements">ACHIEVEMENTS</string>
    <string name="endGame">EXIT</string>
    <string name="ImageEasy">Easy</string>
    <string name="ImageHard">Hard</string>

    <string name="selectDifficulty">난이도를 선택하세요</string>
    <string name="selectNumPlayer">모드를 선택하세요</string>

    <string name="score">SCORE</string>
    <string name="time">TIME</string>

    <string name="showScore">SCORE</string>

    <string name="startScore">00</string>
    <string name="imageView">이미지 준비중입니다.</string>

    <string name="onePlayer">혼자 하기</string>
    <string name="twoPlayer">둘이 하기</string>


    <string name="colorEasy">Easy</string>
    <string name="colorHard">Expert</string>

    <string name="ready">Ready</string>
    <string name="go">Go</string>

    <string name="myScore">My Score </string>
    <string name="countScore">횟수 보너스 </string>
    <string name="sumScore">합계 </string>

    <string name="bestScore">Best Score</string>
    <string name="countFinish">걸린 횟수</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>

    <string name="Mission">Mission</string>

    <string name="highScore">High Score</string>


    <string name="admob_app_id">ca-app-pub-5373946809066449~5224278468</string>
    <string name="banner_ad_unit_id">ca-app-pub-5373946809066449/5032706771</string>
    <string name="banner_ad_unit_id2">ca-app-pub-3940256099942544/6300978111</string>
    <string name="reward_ad_id">ca-app-pub-5373946809066449/7990946567</string>
    <string name="madeby">made by kCat</string>
    <string name="menu">Menu</string>
    <string name="replay">Replay</string>

    <string name="back">뒤로가기</string>
    <string name="stringX">X</string>
</resources>
